[package]
name = "add2obs"
version = "0.1.0"
authors = ["Ash Keel <ashlordkelly@bulge.exposed>"]
edition = "2018"

[dependencies]
obws = "0.7"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }